--- a/styles/style.css
+++ b/styles/style.css
@@ -89,3 +89,11 @@ footer {
     background-color: var(--color3);
     box-shadow: var(--shadow);
 }
+
+.main-section {
+    display: flex;
+    flex-direction: column;
+}
+.cityAspect {
+    /* flex-direction: row; */
+}
