--- a/styles/style.css
+++ b/styles/style.css
@@ -2,19 +2,19 @@
 body {
     /* feel free to update these css variables for a quick theme */
     
-    --color1: white;
+    /* --color1: white;
     --color2: white;
     --color3: white;
     --color4: white;
-    --color5: white;
+    --color5: white; */
     
     /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
         
-    /* --color1: hsla(349, 69%, 76%, 1);
-    --color2: hsla(207, 67%, 44%, 1);
-    --color3: hsla(200, 61%, 56%, 1);
-    --color4: hsla(187, 41%, 94%, 1);
-    --color5: hsla(170, 28%, 95%, 1); */
+    --color1: hsla(335, 86%, 3%, 1);
+    --color2: hsla(222, 15%, 87%, 1);
+    --color3: hsla(211, 29%, 52%, 1);
+    --color4: hsla(188, 36%, 76%, 1);
+    --color5: hsla(28, 100%, 76%, 1);
 
     /* --color1: hsla(45, 86%, 83%, 1);
     --color2: hsla(135, 65%, 98%, 1);
@@ -25,6 +25,7 @@ body {
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
     --gutter: 30px;
+    --gutter2: 5px;
     --footer-height: 25px;
     
     font-family: 'Titillium Web', sans-serif;
@@ -63,8 +64,12 @@ header {
 
 
 h2 {
-    font-size: 1.8rem;
-    font-weight: bold;
+    font-size: 2rem;
+    font-weight: bolder;
+}
+
+h3 {
+    font-size: 1.7rem;
 }
 
 .gutter-right {
@@ -92,10 +97,41 @@ footer {
 
 .main-section {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: var(--gutter);
+}
+
+
+.images {
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border: 2px black solid;
+    border-radius: 6px;
+}
+
+.cityAspect {
+    display: flex;
     flex-direction: column;
+    align-items: space-between;
+    margin: 10px;
 }
 
-
-img {
-    height: 200px;
+.labels {
+    align-self: center;
+    font-size: 1.8rem;
+    font-weight: bolder;
 }
+
+.dropdown {
+    width: 100px;
+    align-self: center;
+    margin-bottom: 5px;
+    border: 1px black solid;
+    border-radius: 3px;
+    font-size: 1.2rem;
+    align-items: center;
+}
+
